tests/testcases/valid/control_flow/15_for_loops_nested.ciel
// Nested for loops

int main() {
    int sum = 0;
    
    // Test 1: Simple nested for loops
    for (int i = 0; i < 3; i = i + 1) {
        for (int j = 0; j < 3; j = j + 1) {
            sum = sum + i + j;
        }
    }
    
    // Test 2: Triple-nested for loops
    for (int i = 0; i < 2; i = i + 1) {
        for (int j = 0; j < 2; j = j + 1) {
            for (int k = 0; k < 2; k = k + 1) {
                sum = sum + 1;
            }
        }
    }
    
    return 0;
}
