tests/testcases/invalid/semantic/15_default_outside_switch.ciel
// Error: 'default' label not within a switch statement
int main() {
    default:
        return 1;
    return 0;
}
